Реализовали фунцкции бизнес логики в веб библиотеке

--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,10 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>Привет группа!</div>
+        <H1>СЕТЕВАЯ БИБЛИОТЕКА</H1>
+        <a href="newBook">Новая книга</a><br>
+        <a href="newReader">Новый читатель</a><br>
+        <a href="takeOnBook">Выдать книгу</a><br>
+        <a href="returnBook">Вернуть книгу</a><br>
     </body>
 </html>
