Реализована задача изменения статуса книги в библиотеке (активна/неактивна)

--- a/web/index.html
+++ b/web/index.html
@@ -16,5 +16,6 @@ and open the template in the editor.
         <a href="newReader">Новый читатель</a><br>
         <a href="takeOnBook">Выдать книгу</a><br>
         <a href="returnBook">Вернуть книгу</a><br>
+        <a href="showListAllBooks">Все книги библиотеки</a><br>
     </body>
 </html>
